[package]
name = "howl"
version = "0.0.1"
edition = "2021"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "Easy for use process watchdog"
homepage = "https://github.com/zondatw/howl"
repository = "https://github.com/zondatw/howl"
keywords = ["watchdog"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
