[package]
name = "howl"
version = "0.0.2"
edition = "2021"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "Easy for use process watchdog"
homepage = "https://github.com/zondatw/howl"
repository = "https://github.com/zondatw/howl"
keywords = ["watchdog"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
nix = "0.26.2"
notify = "6.0.1"
futures = "0.3"

[[bin]]
name = "howl"
path = "src/main.rs"
